...
                      Navigator.pushNamed(
                          context, WatchlistMoviesPage.ROUTE_NAME);
                    },
                  ),
                  ListTile(
                    leading: Icon(Icons.tv_sharp),
                    title: Text('TV Show Watchlist'),
                    onTap: () {
                      Navigator.pushNamed(
                          context, WatchlistTvShowPage.ROUTE_NAME);
                    },
                  ),
                  ListTile(
...
